DOC: refactor documentation structure

--- a/docs/touching.ipynb
+++ b/docs/touching.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Merge or remove neighbouring polygons\n",
+    "\n",
+    "Based on a set of conditions."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 75,
    "metadata": {},
@@ -9,13 +18,6 @@
     "import geopandas\n",
     "from shapely.geometry import box, Polygon\n",
     "from geoplanar import merge_touching"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Merge or remove neighbouring polygons based on a set of conditions"
    ]
   },
   {
